# GenI

./: .cvsignore  AUTHORS  GenI.cabal  INSTALL  Makefile  NEWS  README  README.markdown  Setup.hs  Setup.lhs  Submakefile  TODO  about.html  about.md  cabal-make.inc  configure  libGenI.cabal
GenI/: EnableGUI.hs  GenI.cabal  MainGeni.lhs  Makefile
api-doc/: BoolExp.html  Data-FullList-Internal.html  Data-FullList.html  GenI.haddock  NLP-GenI-Automaton.html  NLP-GenI-Builder.html  NLP-GenI-Configuration.html  NLP-GenI-Console.html  NLP-GenI-Control.html  NLP-GenI-ErrorIO.html  NLP-GenI-FeatureStructure.html  NLP-GenI-Flag.html  NLP-GenI-General.html  NLP-GenI-GeniShow.html  NLP-GenI-GeniVal-Internal.html  NLP-GenI-GeniVal.html  NLP-GenI-LexicalSelection-Types.html  NLP-GenI-LexicalSelection.html  NLP-GenI-Lexicon-Internal.html  NLP-GenI-Lexicon.html  NLP-GenI-Main.html  NLP-GenI-Morphology-Types.html  NLP-GenI-Morphology.html  NLP-GenI-OptimalityTheory.html  NLP-GenI-Parser.html  NLP-GenI-Polarity-Internal.html  NLP-GenI-Polarity-Types.html  NLP-GenI-Polarity.html  NLP-GenI-Pretty.html  NLP-GenI-Semantics.html  NLP-GenI-Simple-SimpleBuilder.html  NLP-GenI-Statistics.html  NLP-GenI-Tag.html  NLP-GenI-TestSuite.html  NLP-GenI-TreeSchema.html  NLP-GenI-Warning-Internal.html  NLP-GenI-Warning.html  NLP-GenI.html  doc-index-33.html  doc-index-43.html  (+65 more)
css/: default.css
doc/: LICENSE  geni-doc.cabal  geni-doc.hs  genidoc.bib  genimanual.tex  literateGenI.tex  paraphrase.tex  realisation.tex  setup.sh  site.hs  update-site.sh
doc/css/: default.css
doc/hcar/: GenI-EG.tex  GenI.tex  Makefile  hcar.tex
doc/homepage/: genipage.css  index.html
doc/manual/: assembly.md  chart-generation.md  command-line.md  config-file.md  formats.md  fs.md  gui.md  index.md  lexical-filtering.md  lexical-selection.md  morphology.md  ot.md  paraphrase.md  polarity.md  semantics.md  tree-schema.md
doc/templates/: default.html
etc/: BinaryDerive.hs  DeriveGeni.hs  INSTALL  SumHUnit.hs  boring  geni.curl  haxmlprof-src.patch  haxmlprof.patch  lhs2haddock  perf-latest.sh  perf-save.sh  quickcheck.py  regression  runprofiler.sh  runselector.sh  runviewer.sh  stripprof.pl  stupidmorph  stupidmorph.pl  tommorph.pl  xmg2geni.xsl
etc/macstuff/: Info.plist  copyMacStuff.sh  macosx-app  wxmac.icns
etc/nosemantic-scripts/: mergelex.pl  tagml2genilex.xsl  tagml2genimacro.xsl  transformgeni.pl
etc/perftest/: grammar-adjtest.geni  lemmas.glex  lexselection-t33  semantics-adjunctions-hard  semantics-adjunctions-t8  semantics-t33
examples/: regression  regression_genirc
examples/artificial/: lexicon  macros  suite  suite-bad  trees
examples/chatnoir/: index  lex  lexicon  mac  macros  sem
examples/clairemg/: Readme  index  looksem  n0Vn1semt.mg  semlex  synlex
examples/croisiere/: README  index  kcroisiere_mac  kcroisiere_sem
examples/demo/: README  demolex  demomac  demosemlex  index  macros  suite  trees
examples/ej/: ej0  ej1  ej2  ej3  ej4  ej5  ej6  ejpollex  index  lex  lexicon  mac  macros  suite  tsem
examples/etc/: Grammar.in  Lexicon.in  grammarClaire1.in  lexiconClaire1.in  meta-example
examples/nosemantics/: README.txt  index  lexicon  macro
examples/performance/: lexicon  macros  rungeni.sh  (+1 more)
geni/: MainGeni.lhs  geni.hs
geni-gui/: Setup.hs  geni-gui.cabal  geni-gui.hs
geni-test/: geni-test.cabal
geni-test/NLP/GenI/: Regression.hs  Test.hs
geni-test/NLP/GenI/Test/: FeatureStructure.hs  General.hs  GeniParsers.hs  GeniVal.hs  LexicalSelection.hs  Lexicon.hs  Morphology.hs  Parser.hs  Polarity.hs  Semantics.hs  Show.hs  Tag.hs  TreeSchema.hs
geni-test/NLP/GenI/Test/Simple/: SimpleBuilder.hs
geni-wx/: Paths_GenI.hs  geni-wx.cabal
geniconvert/: Converter.hs  geniconvert.cabal
geniconvert/NLP/GenI/: HsShow.hs  HsShow.lhs
geniconvert/NLP/GenI/Converter/: ReadTagml.hs  XmgTagml.hs
geniconvert/profiling/: run  save  setup  toy.xml
geniconvert/tests/: valuation.xml
geniprog/: GenI.cabal  MainGeni.lhs  Setup.lhs
geniprog/NLP/GenI/: Console.hs  GraphvizShow.lhs  GraphvizShowPolarity.lhs  Gui.lhs  GuiHelper.lhs  SysGeni.lhs
geniprog/NLP/GenI/CkyEarley/: CkyGui.lhs
geniprog/NLP/GenI/Simple/: SimpleGui.lhs
geniprog/macstuff/: Info.plist  createdmg.sh  macosx-app
genireport/: genireport.cabal  report.css
geniserver/: Main.hs  Makefile  README  example-instructions.json  geniserver.cabal
geniserver/src/: Client.hs  ClientServer.hs  Server.hs  ServerFlags.hs  ServerInstruction.hs
geniserver/src/NLP/GenI/: Server.hs
geniserver/src/NLP/GenI/Server/: Flag.hs  Flags.hs  Instruction.hs
geniwrapper/: HsStart.c  HsStart.h  Makefile  MinimalGenI.hs  README  Wrapper.hs  clean-mac.sh  dist-mac.sh  ej-sem  lexicon2  megadyld  test-c-mac.c  test-c.c  test-hs-c.hs  test-hs.hs  test-mac.sh  test.hs
grammars/: README
libgeni/: Makefile  libGenI.cabal
libgeni/NLP/GenI/: Btypes.lhs  BtypesBinary.hs  Builder.lhs  Configuration.lhs  General.lhs  Geni.lhs  GeniParsers.lhs  GeniShow.lhs  Morphology.lhs  Polarity.lhs  Tags.lhs
libgeni/NLP/GenI/CkyEarley/: CkyBuilder.lhs
libgeni/NLP/GenI/Simple/: SimpleBuilder.lhs
manual/: assembly.html  chart-generation.html  command-line.html  config-file.html  formats.html  fs.html  gui.html  index.html  lexical-filtering.html  lexical-selection.html  morphology.html  ot.html  paraphrase.html  polarity.html  semantics.html  tree-schema.html
sillymorph/: README  nullmorph.hs  sillymorph.cabal  sillymorph.hs
sillymorph/example/: input  lexicon  macros  morphlex  morphlex-ascii  suite
src/: BoolExp.hs  Client.hs  Converter.hs  Converter.lhs  CountOutputs.lhs  ExtractTestCases.lhs  MainGeni.lhs  MainTest.hs  MakeSuite.hs  QuickCheck.hs  Select.hs  Server.hs  Statistics.hs
src/geni-test/: geni-test.cabal
src/geni-test/NLP/GenI/: Test.hs
src/geni-test/NLP/GenI/Test/: FeatureStructures.hs  General.hs  GeniParsers.hs  GeniVal.hs  LexicalSelection.hs  Lexicon.hs  Polarity.hs  Semantics.hs  Tags.hs  TreeSchemata.hs
src/geni-test/NLP/GenI/Test/Simple/: SimpleBuilder.hs
src/geni-test/NLP/GenI/Test/SmallCheck/: GeniVal.hs
(+391 files in other folders)
