Name:           GenI
Version:        0.21.20111122
License:        GPL
License-file:   LICENSE
Author:         Carlos Areces and Eric Kow
Category:       Natural Language Processing
Synopsis:       A natural language generator (specifically, an FB-LTAG surface realiser)
Description:    A natural language generator (specifically, an FB-LTAG surface realiser)
Homepage:       http://projects.haskell.org/GenI
Maintainer:     geni-users@loria.fr
Build-Type:     Custom
Cabal-Version: >=1.8
data-files: AUTHORS, INSTALL, README, NEWS, GenI.cabal,
            examples/artificial/lexicon,
            examples/artificial/macros,
            examples/artificial/suite,
            examples/artificial/suite-bad,
            examples/chatnoir/lexicon,
            examples/chatnoir/macros,
            examples/chatnoir/suite,
            examples/demo/lexicon,
            examples/demo/macros,
            examples/demo/README,
            examples/demo/suite,
            examples/ej/lexicon,
            examples/ej/macros,
            examples/ej/suite,
            examples/nosemantics/lexicon,
            examples/nosemantics/macros,
            examples/nosemantics/README.txt,
            examples/promettre/lexicon,
            examples/promettre/macros,
            examples/promettre/morphinfo,
            examples/promettre/suite,
            examples/xmg-example/grammar/Arguments.mg,
            examples/xmg-example/grammar/demo-corpus-utf8.txt,
            examples/xmg-example/grammar/Entete.mg,
            examples/xmg-example/grammar/Evaluations.mg,
            examples/xmg-example/grammar/Misc.mg,
            examples/xmg-example/grammar/parse-corpus.sh,
            examples/xmg-example/grammar/Sem.mg,
            examples/xmg-example/grammar/VerbMorph.mg,
            examples/xmg-example/lexicon/demo-lemma-utf8.lex,
            examples/xmg-example/lexicon/demo-morph-utf8.mph,
            examples/xmg-example/Makefile,
            examples/xmg-example/README,
            examples/xmg-example/suite,
            etc/stupidmorph.pl,
            etc/macstuff/Info.plist,
            etc/macstuff/wxmac.icns

extra-source-files: src/NLP/GenI/Test.hs
                    src/NLP/GenI/Simple/SimpleGui.hs,
                    src/NLP/GenI/Gui.hs
                    src/NLP/GenI/GraphvizShow.hs,
                    src/NLP/GenI/GuiHelper.hs
                    src/NLP/GenI/Console.hs,
                    src/NLP/GenI/Graphviz.hs
                    src/NLP/GenI/BuilderGui.hs,
                    src/NLP/GenI/GraphvizShowPolarity.hs,
                    src/NLP/GenI/Regression.hs


Flag gui
  description: Build with a graphical user interface
  default: False

Flag static
  Description: Build a static binary
  Default:     False

Flag test
  description: Compile standalone unit tests binary
  default:     False

Library
  Build-depends: base >= 4 && < 5
               , binary >= 0.5.0.2 && < 0.6
               , bytestring  == 0.9.*
               , cabal-macosx  >= 0.1.2 && < 0.2
               , containers >= 0.1
               , deepseq >= 1.1 && < 1.3
               , directory   > 1
               , filepath    == 1.*
               , hslogger == 1.1.*
               , json >= 0.4.3 && < 0.6
               , MaybeT == 0.1.*
               , mtl > 1.0 && < 2.1
               , ordered == 0.1.*
               , parsec >= 2 && < 3.2
               , process > 1
               , split >= 0.1.1 && < 0.2
               , syb
               , text
               , time >= 1.1 && < 1.3
               , utf8-string >= 0.3.5 && < 0.4
               , yaml-light  == 0.1.*

  if !flag(gui)
    cpp-options:      -DDISABLE_GUI

  if flag(static)
    ghc-options: -static -optl-static

  Exposed-Modules:
                BoolExp,
                NLP.GenI.Btypes,
                NLP.GenI.BtypesBinary,
                NLP.GenI.FeatureStructures,
                NLP.GenI.Flags,
                NLP.GenI.General,
                NLP.GenI.GeniParsers,
                NLP.GenI.GeniShow,
                NLP.GenI.GeniVal,
                NLP.GenI.Lexicon,
                NLP.GenI.LexicalSelection,
                NLP.GenI.Semantics,
                NLP.GenI.Tags,
                NLP.GenI.TestSuite,
                NLP.GenI.TreeSchemata,
                NLP.GenI.Warnings,
                NLP.GenI.Morphology,
                NLP.GenI.Morphology.Types,
                NLP.GenI.OptimalityTheory,
                NLP.GenI.Polarity,
                NLP.GenI.Polarity.Internal,
                NLP.GenI.Polarity.Types,
                NLP.GenI.Automaton,
                NLP.GenI.Statistics,
                NLP.GenI.Builder,
                NLP.GenI.Simple.SimpleBuilder,
                -- NLP.GenI.CkyEarley.CkyBuilder,
                NLP.GenI.Geni, NLP.GenI.Configuration
  Other-Modules:

  Hs-Source-Dirs: src
  Ghc-options:    -Wall -O2
  Ghc-prof-options: -auto-all

Executable     geni
 Main-Is:        Main.hs
 Hs-Source-Dirs: src/geni

 Ghc-options:    -Wall -O2 -rtsopts
 Ghc-prof-options: -auto-all
 Build-Depends: base >= 4 && < 5
              , GenI
              , containers  >= 0.1
              , directory   > 1
              , filepath    == 1.*
              , yaml-light  == 0.1.*
              , hslogger    == 1.1.*
              , json        >= 0.4 && < 0.6
              , mtl         > 1.0 && < 2.1
              , process     > 1
              , split       == 0.1.*
              , utf8-string == 0.3.*
              , strict-io   == 0.2.*
 if flag(gui)
    Build-Depends: wx >= 0.10.3 && < 0.13
                 , text     == 0.11.*
                 , graphviz >= 2999.12 && < 2999.14
 else
    cpp-options:      -DDISABLE_GUI

 if flag(static)
    ghc-options: -static -optl-static

Executable geni-test
 Main-Is:       MainTest.hs
 Hs-Source-Dirs: src/geni-test
 if flag(test)
    Buildable: True
    Build-Depends: GenI
                 , base >= 4 && < 5
                 , containers  >= 0.1
                 , filepath   == 1.*
                 , parsec >= 2 && < 3.2
                 , QuickCheck == 2.4.*
                 , HUnit > 1 && < 1.3
                 , test-framework-hunit >= 0.2.4 && < 0.3
                 , test-framework-quickcheck2 >= 0.2.4 && < 0.3
                 , test-framework > 0.3
                 , text
 else
    Buildable: False
