Name:           geni-test
Version:        0.3
License:        GPL
License-file:   LICENSE
Author:         Eric Kow
Description:    GenI test utilities
                .
                Note that GenI.cabal already builds this code.  The idea here
                is to have a test library that you can use for testing code
                based on GenI.
Maintainer:     geni-users@loria.fr
Build-type:     Simple
Cabal-Version: >=1.8

Library
  Exposed-Modules: NLP.GenI.Test.FeatureStructure
                 , NLP.GenI.Test.Parser
                 , NLP.GenI.Test.General
                 , NLP.GenI.Test.GeniVal
                 , NLP.GenI.Test.LexicalSelection
                 , NLP.GenI.Test.Lexicon
                 , NLP.GenI.Test.Morphology
                 , NLP.GenI.Test.Polarity
                 , NLP.GenI.Test.Semantics
                 , NLP.GenI.Test.Show
                 , NLP.GenI.Test.Simple.SimpleBuilder
                 , NLP.GenI.Test.Tag
                 , NLP.GenI.Test.TreeSchema

  Build-Depends: GenI
               , base >= 4 && < 5
               , containers  >= 0.1
               , errors
               , filepath   == 1.*
               , json
               , mtl
               , parsec >= 2 && < 3.2
               , QuickCheck == 2.4.*
               , HUnit > 1 && < 1.3
               , smallcheck
               , test-framework-hunit >= 0.2.4
               , test-framework-quickcheck2 >= 0.2.4
               , test-framework-smallcheck
               , test-framework > 0.3
               , text

  Hs-Source-Dirs: .
