Name:           GenI
Version:        0.16.1
License:        GPL
License-file:   LICENSE
Author:         Carlos Areces and Eric Kow
Cabal-version: >=1.2
build-type:     Custom
Category:       Natural Language Processing
Homepage:       http://trac.loria.fr/~geni
Synopsis:       A natural language generator (specifically, an FB-LTAG surface realiser)
Description:    A natural language generator (specifically, an FB-LTAG surface realiser)
Maintainer:     eric.kow@loria.fr

extra-source-files: EnableGUI.hs, NLP/GenI/SysGeni.lhs
                    NLP/GenI/CkyEarley/CkyGui.lhs
                    NLP/GenI/Simple/SimpleGui.lhs, NLP/GenI/Gui.lhs
                    NLP/GenI/GraphvizShow.lhs, NLP/GenI/GuiHelper.lhs
                    NLP/GenI/Console.hs, NLP/GenI/Graphviz.hs
                    NLP/GenI/BuilderGui.lhs, NLP/GenI/unused/Predictors.lhs
                    NLP/GenI/GraphvizShowPolarity.lhs

data-files: GenI.cabal macstuff/macosx-app

Flag splitBase
  description: Choose the new smaller, split-up base package.

Executable     geni
 Main-Is:        MainGeni.lhs
 Hs-Source-Dirs: .
 Extensions:     CPP, Rank2Types, OverlappingInstances, MultiParamTypeClasses
 Ghc-options:    -Wall
 Build-Depends: filepath > 1.0 && < 1.2,
                parsec >= 2.1 && < 3,
                QuickCheck >= 1.2 && < 2,
                HUnit >= 1 && < 1.3,
                mtl >= 1.0 && < 1.2,
                binary >= 0.2 && < 0.5,
                wx >= 0.10.3 && < 0.12,
                wxcore >= 0.10.3 && < 0.12,
                libGenI >= 0.16 && < 0.18
 if flag(splitBase)
    Build-Depends: base >= 3,
                   process > 1, directory > 1, containers >= 0.1
 else
    Build-Depends: base < 3
