Name:           geniserver
Version:        0.2
License:        GPL
License-file:   LICENSE
Author:         Carlos Areces and Eric Kow
Build-Depends:  base < 4.1,
                cmdargs >= 0.1 && < 0.2,
                network >= 2.2 && < 2.3,
                json >= 0.4.3 && < 0.5,
                unix >= 2.3 && < 2.4,
                utf8-string >= 0.3.5 && < 0.4,
                parsec >= 2.1 && < 3,
                GenI >= 0.19.0 && < 0.21

Description:    Simple server for GenI results
Maintainer:     geni-users@loria.fr
Build-type:     Simple

Executable:     geniclient
Hs-Source-Dirs: src
Main-Is:        Client.hs
Ghc-options:    -Wall -O2

Executable:     geniserver
Hs-Source-Dirs: src
Main-Is:        Server.hs
Ghc-options:    -Wall -O2
