Name:           geniserver
Version:        0.2
License:        GPL
License-file:   LICENSE
Author:         Carlos Areces and Eric Kow
Build-Depends:  base < 5,
                bytestring >= 0.9,
                cmdargs >= 0.7,
                enumerator == 0.4.*,
                http-types == 0.6.*,
                json >= 0.4.3 && < 0.6,
                transformers,
                utf8-string >= 0.3.5 && < 0.4,
                wai   == 0.4.*,
                warp  == 0.4.*,
                GenI >= 0.19.0 && < 0.23

Description:    Simple HTTP server for GenI results
Maintainer:     geni-users@loria.fr
Build-type:     Simple

Executable:     geniserver
Hs-Source-Dirs: src
Main-Is:        Server.hs
Ghc-options:    -Wall -O2
