Name:           geniserver
Version:        0.4
License:        GPL
License-file:   LICENSE
Author:         Eric Kow
Description:    Simple HTTP server for GenI results
Maintainer:     geni-users@loria.fr
Build-type:     Simple
Cabal-Version: >=1.8

Library
  Exposed-Modules: NLP.GenI.Server
                 , NLP.GenI.Server.Instruction
                 , NLP.GenI.Server.Flag

  Build-Depends: base < 5
               , bytestring >= 0.9
               , cmdargs >= 0.7
               , conduit == 0.2.*
               , http-types == 0.6.*
               , json >= 0.4.3 && < 0.6
               , transformers
               , utf8-string >= 0.3.5 && < 0.4
               , wai   == 1.1.*
               , text  < 1.0
               , GenI >= 0.19.0 && < 0.23
  Ghc-options:    -Wall -O2
  Hs-Source-Dirs: src

Executable geniserver
  Main-Is:        Main.hs
  Ghc-options:    -Wall -O2
  Build-Depends: base < 5
               , geniserver
               , GenI >= 0.19.0 && < 0.23
               , warp  == 1.1.*
               , text  < 1.0
