Name:           libGenI
Version:        0.17.1
License:        GPL
License-file:   LICENSE
Author:         Carlos Areces and Eric Kow
Category:       Natural Language Processing
Synopsis:       A natural language generator (specifically, an FB-LTAG surface realiser)
Description:    A natural language generator (specifically, an FB-LTAG surface realiser)
Homepage:       http://projects.haskell.org/GenI
Maintainer:     geni-users@loria.fr
Build-Type:     Simple
Cabal-Version: >=1.2
data-files: AUTHORS, INSTALL, README, libGenI.cabal

Flag splitBase
  description: Choose the new smaller, split-up base package.

Library
  Build-depends: parsec >= 2 && < 3,
                 QuickCheck >= 1.2 && < 2,
                 HUnit > 1 && < 1.3,
                 mtl > 1.0 && < 1.2,
                 binary > 0.2 && < 0.5
  if flag(splitBase)
    Build-depends: base >= 3 && < 4, containers, process
  else
    Build-Depends: base <  3
  Exposed-Modules:
                NLP.GenI.Btypes,
                NLP.GenI.BtypesBinary,
                NLP.GenI.General,
                NLP.GenI.GeniParsers,
                NLP.GenI.GeniShow,
                NLP.GenI.Tags,
                NLP.GenI.Morphology,
                NLP.GenI.Polarity, NLP.GenI.Automaton,
                NLP.GenI.Statistics,
                NLP.GenI.Builder,
                NLP.GenI.Simple.SimpleBuilder, NLP.GenI.CkyEarley.CkyBuilder,
                NLP.GenI.Geni, NLP.GenI.Configuration

  -- extra-sources-files:
  Hs-Source-Dirs: .
  Extensions:     CPP, Rank2Types, OverlappingInstances, MultiParamTypeClasses, FlexibleContexts, TypeSynonymInstances,  FlexibleInstances, DeriveDataTypeable, ExistentialQuantification, LiberalTypeSynonyms
  Ghc-options:    -Wall -O2
