Name:           geni-test
Version:        0.1
License:        GPL
License-file:   LICENSE
Author:         Eric Kow
Description:    GenI test utilities
                .
                Note that GenI.cabal already builds this code.  The idea here
                is to have a test library that you can use for testing code
                based on GenI.
Maintainer:     geni-users@loria.fr
Build-type:     Simple
Cabal-Version: >=1.8

Library
  Exposed-Modules: NLP.GenI.Test.FeatureStructures
                 , NLP.GenI.Test.GeniParsers
                 , NLP.GenI.Test.GeniVal
                 , NLP.GenI.Test.Morphology
                 , NLP.GenI.Test.Polarity
                 , NLP.GenI.Test.Semantics
                 , NLP.GenI.Test.Simple.SimpleBuilder
                 , NLP.GenI.Test.Tags
                 , NLP.GenI.Test.TreeSchemata

  Build-Depends: GenI
               , base >= 4 && < 5
               , containers  >= 0.1
               , filepath   == 1.*
               , json
               , parsec >= 2 && < 3.2
               , QuickCheck == 2.4.*
               , HUnit > 1 && < 1.3
               , test-framework-hunit >= 0.2.4 && < 0.3
               , test-framework-quickcheck2 >= 0.2.4 && < 0.3
               , test-framework > 0.3
               , text
